# MeridianTakeHomeAssignment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.web  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
docs/: DEPLOY.md  project-overview.md
docs/design/: ai-review-spec.md  api-fastapi-migration.md  design-doc.md  organizations-spec.md  primitive-context-spec.md  submit-and-handoff-spec.md  system-access-and-secrets.md  whiteboard-spec.md
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/app/: config.py  llm.py  main.py  models.py  serialize.py  util.py
services/api/app/chat/: assemble.py  call_claude.py  fixtures.py  mock.py  normalize.py  prompt.py  schema.py  service.py
services/api/app/review/: assemble.py  call_claude.py  dedupe.py  fixtures.py  mock.py  prompt.py  schema.py  service.py
services/api/app/spec/: __init__.py  edit_ops.py  primitives.py  process_graph.py
services/api/tests/: gen_parity_snapshots.ts  parity_boards.json  parity_snapshots.json  test_endpoints.py  test_spec_parity.py
supabase/: config.toml
supabase/migrations/: 00000000000001_init.sql  00000000000001_initial_schema.sql  00000000000002_ai_annotation.sql  00000000000003_ai_chat.sql  00000000000004_branch_primitive.sql  00000000000005_home_settings.sql  00000000000006_roles_and_handoff.sql  00000000000007_card_attachments.sql  00000000000008_fix_handle_new_user_search_path.sql  00000000000009_unlock_and_profile_email.sql  00000000000010_organizations.sql  00000000000011_system_secrets.sql
(+2 files in other folders)
