[project]
name = "meridian-api"
version = "0.1.0"
description = "Meridian API service (FastAPI) — AI review + AI canvas editing. Replaces the former @meridian/api Hono server."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
